@@ -10,6 +10,7 @@ import org.mapstruct.*;
 import org.mapstruct.factory.Mappers;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Mapper(componentModel = "spring", uses = { OrderMapper.class, CartMapper.class, AddressMapper.class })
 public interface UserMapper {
@@ -46,25 +47,25 @@ public interface UserMapper {
 
   @Named("ordersToJpa")
   default List<JpaOrderEntity> ordersToJpa(List<Order> orders) {
-    return orders != null ? orders.stream().map(OrderMapper.INSTANCE::toJpa).toList() : null;
+    return orders != null ? orders.stream().map(OrderMapper.INSTANCE::toJpa).collect(Collectors.toList()) : null;
   }
 
   @Named("ordersToDomain")
   default List<Order> ordersToDomain(List<JpaOrderEntity> jpaOrders) {
-    return jpaOrders != null ? jpaOrders.stream().map(OrderMapper.INSTANCE::toDomain).toList() : null;
+    return jpaOrders != null ? jpaOrders.stream().map(OrderMapper.INSTANCE::toDomain).collect(Collectors.toList()) : null;
   }
 
   @Named("cartsToJpa")
   default List<JpaCartEntity> cartsToJpa(List<Cart> carts) {
     return carts != null
-            ? carts.stream().map(CartMapper.INSTANCE::toJpa).toList()
+            ? carts.stream().map(CartMapper.INSTANCE::toJpa).collect(Collectors.toList())
             : null;
   }
 
   @Named("cartsToDomain")
   default List<Cart> cartsToDomain(List<JpaCartEntity> jpaCarts) {
     return jpaCarts != null
-            ? jpaCarts.stream().map(CartMapper.INSTANCE::toDomain).toList()
+            ? jpaCarts.stream().map(CartMapper.INSTANCE::toDomain).collect(Collectors.toList())
             : null;
   }
 }
